Refactor AnnouncementManager and CompetitorManager to integrate EventType and Image services, enhancing event and image handling capabilities